# perfsizesagemaker

./: .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  JenkinsfilePerfTest  Makefile  README.md  mypy.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-publish.yml  python-test.yml
perfsizesagemaker/: constants.py  cost.py  credentials.py  main.py
perfsizesagemaker/environment/: sagemaker.py
perfsizesagemaker/load/: sagemaker.py
perfsizesagemaker/reporter/: html.py
perfsizesagemaker/step/: sagemaker.py
resources/configs/cost/: us-west-2.json
resources/configs/logging/: logging.yml
resources/docs/: auto-scale-metric.md  auto-scale-testing.md
resources/samples/model-simulator/job-2021-08-11-100314-model-simulator/: Final_Job_Report.html
resources/samples/model-simulator/job-2021-08-11-100314-model-simulator/1628676529-ml.m5.large-1-1TPS-20210811100851239/: index.html  req_sagemaker-learn-6e012.html
resources/samples/model-simulator/job-2021-08-11-100314-model-simulator/1628676714-ml.m5.large-1-2TPS-20210811101156366/: index.html  req_sagemaker-learn-6e012.html
resources/samples/model-simulator/job-2021-08-11-100314-model-simulator/1628676899-ml.m5.large-1-3TPS-20210811101501792/: index.html  req_sagemaker-learn-6e012.html
resources/samples/model-simulator/job-2021-08-11-100314-model-simulator/1628677085-ml.m5.large-1-4TPS-20210811101807222/: index.html  req_sagemaker-learn-6e012.html
tests/: test_cost.py  test_main.py
tests/reporter/: test_html.py
tests/step/: test_sagemaker.py
(+147 files in other folders)
